Tons of cosmetic changes and... TRYING TO FIX AN INVISIBLE DROPDOWN BUTTONgit add -A :((((

--- a/extra.css
+++ b/extra.css
@@ -1,3 +1,85 @@
+
+body {
+
+    background-image: url("assets/background.gif");
+    background-size: cover;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+/* background for navbar and... make it glow... */
+
+#navbar {
+    background: transparent;
+    background-size: inherit;
+    margin: 0%;
+    padding: 0%;
+    color: rgb(14, 195, 219);
+    text-align: center;
+    font-family: fantasy;
+    font-weight: bolder;
+    -webkit-animation: glow 1s ease-in-out infinite alternate;
+    -moz-animation: glow 1s ease-in-out infinite alternate;
+}
+
+button {
+    background-image: url("assets/button-background.gif");
+}
+
+@-webkit-keyframes glow {
+    from {
+      text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #1700e6, 0 0 30px #1700e6, 0 0 40px #1700e6, 0 0 50px #1700e6, 0 0 60px #1700e6;
+    }
+    to {
+      text-shadow: 0 0 10px #fff, 0 0 20px #24abc0, 0 0 30px #24abc0, 0 0 40px #24abc0, 0 0 50px #24abc0, 0 0 60px #24abc0, 0 0 70px #24abc0;
+    }
+}
+
+/* making sure the below elements are transparant, obviously to ensure the background is visible */
+/* also taking redundant measures in ensuring a uniform font */
+
+
+header {
+    background: transparent;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    padding: 0%;
+    margin: 0%;
+}
+
+.jumbotron {
+    background: transparent;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.jumbotron-fluid{
+    background: transparent;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+h1 {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: bolder;
+    font-size: xx-large;
+    color:aquamarine;
+    text-shadow: 2px 2px 3px blue;
+}
+
+/* beginning of the content */
+
+article {
+    background-image: url("assets/article-background.gif");
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: blue;
+    text-shadow: 2px 2px darkcyan;
+}
+
+p {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color:aquamarine;
+    text-shadow: 2px 2px blue;
+}
+
+/* media queries */
+
 /* silliness for squashed screen */
 
 @media screen and (max-width: 390px) {
@@ -18,74 +100,3 @@
     }
 }
 
-/* background for navbar and... make it glow... */
-
-#navbar {
-    background-image: url("assets/background.gif");
-    background-size: cover;
-    color: rgb(22, 11, 114);
-    text-align: center;
-    font-family: fantasy;
-    font-weight: bolder;
-    -webkit-animation: glow 1s ease-in-out infinite alternate;
-    -moz-animation: glow 1s ease-in-out infinite alternate;
-}
-
-@-webkit-keyframes glow {
-    from {
-      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #1700e6, 0 0 40px #1700e6, 0 0 50px #1700e6, 0 0 60px #1700e6, 0 0 70px #1700e6;
-    }
-    to {
-      text-shadow: 0 0 20px #fff, 0 0 30px #24abc0, 0 0 40px #24abc0, 0 0 50px #24abc0, 0 0 60px #24abc0, 0 0 70px #24abc0, 0 0 80px #24abc0;
-    }
-}
-
-body {
-    background-image: url("assets/background.gif");
-    background-size: cover;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-/* making sure the below elements are transparant, obviously to ensure the background is visible */
-/* also taking redundant measures in ensuring a uniform font */
-
-div {
-    background: transparent
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-header {
-    background: transparent;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-.jumbotron {
-    background: transparent;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-.jumbotron-fluid{
-    background: transparent;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-h1 {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: bolder;
-    font-size: xx-large;
-    color: blue;
-    text-shadow: 2px 2px 3px darkcyan;
-}
-
-article {
-    background-image: url("assets/newyears2020.jpg");
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: blue;
-    text-shadow: 2px 2px darkcyan;
-}
-
-p {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: blue;
-    text-shadow: 2px 2px darkcyan;
-}
